--- a/src/components/IngredientCard/index.css
+++ b/src/components/IngredientCard/index.css
@@ -1,30 +1,28 @@
 .ingredient-card {
   align-items: center;
   background-color: #4f4f58;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.151);
   display: flex;
   flex-direction: column;
-  height: 15em;
+  height: 12em;
   margin: 0.5em;
+  margin-bottom: 1em;
   text-align: center;
   transition: 0.2s;
-  width: 14em;
+  width: 11em;
 }
 
 .igredient-image {
-  background: linear-gradient(80deg, rgba(236, 215, 215, 0.164), rgba(1, 183, 255, 0.089));
-  border-bottom: rgba(202, 202, 202, 0.308) solid 1px;
-  border-radius: 10px 10px 0 0;
-  height: 60%;
-  margin: 0;
-  padding: 0;
+  background: linear-gradient(80deg, rgba(209, 199, 199, 0.774), rgba(213, 217, 219, 0.829));
+  border-radius: 5px 5px 0 0;
+  height: 70%;
   top: 0;
   width: 100%;
 }
 
 .igredient-image img {
-  margin-top: 1.5em;
+  width: 70%;
 }
 
 .igredient-name {
